<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/book_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:elevation="20dp"
        android:outlineAmbientShadowColor="@color/black"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/IV_book"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@android:drawable/ic_menu_camera"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_backspace_black_24dp" />

            <TextView
                android:id="@+id/isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/IV_book"
                android:text="@string/isbn"
                android:layout_marginStart="10dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/isbn"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@id/IV_book"
                android:text="@string/titulo"
                android:layout_marginStart="10dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/titulo"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/IV_book"
                android:text="@string/categoria"
                android:layout_marginStart="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cat"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/IV_book"
                android:text="@string/autor"
                android:layout_marginStart="10dp"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/Linear"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/img_delete"
                android:layout_centerVertical="true"
                android:layout_marginStart="80dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="31dp"
                android:layout_toRightOf="@+id/IV_book"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lb_isbn"
                    android:layout_width="245dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    tools:text="@string/isbn" />

                <TextView
                    android:id="@+id/lb_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    tools:text="@string/titulo" />

                <TextView
                    android:id="@+id/lb_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    tools:text="@string/categoria" />

                <TextView
                    android:id="@+id/lb_autor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    tools:text="@string/autor" />


            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>